@@ -8,6 +8,8 @@ Version 1.17-12 (opened August 7, 2011)
 	1634). Basically everything except 'permute' dependence and
 	monoMDS. Also adds the minimal NAMESPACE file of 1695 (without S3
 	method registration and later revs).
+	* merged 1704: better axis limits in plot.envfit to allow space
+	for vector and centroid labels.
 	* partially merged 1700: model.{frame,matrix}.cca scoping.
 	* merged 1699: ade2vegancca typo.
 	* partially merged r1696: superfluous aliases in deviance.cca.Rd
